--- a/style.css
+++ b/style.css
@@ -1,60 +1,64 @@
 * {
-    margin: 0;
-    padding: 0;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 #defaultCanvas0 {
-    padding: 30px 50px;
+  padding: 30px 50px;
 }
 
 h1 {
-    font-family: 'Stick', sans-serif; 
-    font-size: 70px;
-    padding: 0 0 30px 0;
-    color: rgb(44, 87, 42);
+  font-family: "Stick", sans-serif;
+  font-size: 70px;
+  padding: 0 0 30px 0;
+  color: rgb(44, 87, 42);
 }
 
-h2, h3, h4, button {
-    font-family: 'Amatic SC', cursive;
-    color: rgb(82, 82, 82);
+h2,
+h3,
+h4,
+button {
+  font-family: "Amatic SC", cursive;
+  color: rgb(82, 82, 82);
 }
 
 h2 {
-    padding: 30px 0 0 0;
-    font-size: 32px;
+  padding: 30px 0 0 0;
+  font-size: 32px;
 }
 
-h3{
-    font-size: 25px;
-    
+h3 {
+  font-size: 25px;
 }
 
 h4 {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 p {
-    font-family: 'Amatic SC', cursive;
-    font-size: 22px;
-    color: rgb(110, 110, 110);
+  font-family: "Amatic SC", cursive;
+  font-size: 22px;
+  color: rgb(110, 110, 110);
 }
 
 button {
-    background-color: white;
-    border: 0;
-    color: rgb(110, 110, 110);
-    border-radius: 5px;
-    padding: 10px;
-    font-size: 50px;
+  background-color: white;
+  border: 0;
+  color: rgb(110, 110, 110);
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 50px;
 }
 
 button:active {
-    border: 1px solid rgb(110, 110, 110); 
+  border: 1px solid rgb(110, 110, 110);
 }
 
-button:focus {outline:0;}
+button:focus {
+  outline: 0;
+}
 
 button:hover {
-    background: rgb(236, 234, 234);
+  background: rgb(236, 234, 234);
 }
