--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 h1 {
   font-family: "Stick", sans-serif;
   font-size: 70px;
-  padding: 0 0 30px 0;
-  color: rgb(44, 87, 42);
+  padding: 50px 0 30px 0;
+  color: rgb(88, 88, 88);
 }
 
 h2,
